[package]
name = "gomoku"
version = "0.1.0"
authors = ["Patryk Stronski <p.stronski13@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.5.5"
cursive = "0.15"
gtk = "^0.8.0"
relm = "^0.19.0"
relm-derive = "^0.19.0"

